# backend/internal/entity/writter.go
@@ -1,0 +1,7 @@
+package entity
+
+const TABLE_WRITERS = "writers"
+
+type Writer struct {
+	Name string `json:"name"`
+}
