# backend/internal/route/routes.go
@@ -1,0 +1,7 @@
+package route
+
+type Routes struct {
+	Book     IBookRoute
+	Category ICategoryRoute
+	Writer   IWriterRoute
+}
